// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CustomAxisLabel /> renders correctly as the yAxis 1`] = `
<g
  transform="translate(50, 112.99999999999999)"
>
  <text
    className="sc-btzYZH khMJGf"
  >
    X Axis
  </text>
</g>
`;

exports[`<CustomAxisLabel /> renders correctly with no props 1`] = `
<g
  transform="translate(0, 68) rotate(-90)"
>
  <text
    className="sc-btzYZH khMJGf"
  >
    Y Axis
  </text>
</g>
`;
